# journalaist

./: .gitignore  LICENSE  README.md  final_page.py  interview.py  journalaist.py  luma_generate.py  markdown_formatter.py  mistral_chat.py  mistral_files.py  pixi.toml  prompts.py  pyproject.toml  story_generation.py
.devcontainer/: devcontainer.json
alt_prompts/: interview.md
alt_prompts/story_teller/: article.md  blog_post.md  journal_entry.md  short_story.md
conversation_histories/: conversation_history.txt
prompts/: interview.md  picture_information.md  story_teller.md
saved stories/tesla factory/: conversation_history.txt  story.md
stories/: story.md
