[tool.poetry]
name = "journalaist"
version = "0.1.0"
description = ""
authors = ["Jonathan Nye <contact@denyed.xyz>", "Ferdinand Schenck <fwschenck@gmail.com>", "Axel <axel@axel.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mistralai = "^1.1.0"
pillow = "^10.4.0"
streamlit = "^1.38.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
